// Copyright 2024 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package test;

import "google/protobuf/any.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";

message Fake {
  google.protobuf.Any any = 1;
  google.protobuf.FieldMask field_mask = 2;
  google.protobuf.Timestamp timestamp = 3;
  repeated google.protobuf.Any repeated_any = 4;
  repeated google.protobuf.FieldMask repeated_field_mask = 5;
  repeated google.protobuf.Timestamp repeated_timestamp = 6;
}
